<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>Java Twitch API (JTA)</name>
    <description>A java API to interact with Twitch IRC.</description>
    <url>https://jta.twitchapis.org</url>

    <groupId>org.twitchapis.jta</groupId>
    <artifactId>JavaTwitchAPI</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <inceptionYear>2020</inceptionYear>
    <organization>
        <name>TwitchApis</name>
        <url>https://twitchapis.org</url>
    </organization>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/twitchapis/jta/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:https://github.com/twitchapis/jta.git</connection>
        <developerConnection>scm:git:ssh://github.com/twitchapis/jta.git</developerConnection>
        <url>https://github.com/twitchapis/jta</url>
    </scm>

    <licenses>
        <license>
            <name>GNU General Public License, Version 3</name>
            <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>TwitchApis</id>
            <url>https://twitchapis.org</url>
            <organization>TwitchApis</organization>
            <organizationUrl>https://github.com/TwitchApis</organizationUrl>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name>TwitchApis JTA Contributors</name>
            <url>https://github.com/TwitchApis/JavaTwitchAPI/graphs/contributors</url>
        </contributor>
    </contributors>

    <properties>
        <maven.compiler.release>11</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
					<configuration>
					  <release>11</release>
					  <compilerArgs>
						<arg>--add-reads</arg>
						<arg>JavaTwitchAPI=ALL-UNNAMED</arg>
					  </compilerArgs>
					</configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <distributionManagement>
        <snapshotRepository>
            <id>jta-snapshots</id>
            <name>jta-snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.5.1</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.26</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20201115</version>
        </dependency>
    </dependencies>
</project>